--- a/AdminApp/appsettings.json
+++ b/AdminApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=bd/admin.db"
+  },
   "AllowedHosts": "*"
 }
